--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.intellisense.review">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logoapp"
@@ -9,7 +14,8 @@
         android:roundIcon="@mipmap/logoapp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:noHistory="true">
             <intent-filter>
@@ -23,7 +29,7 @@
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/login"
-                        android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -40,29 +46,31 @@
         </activity>
 
         <!-- Activity which represents list of reviews -->
-        <activity android:name=".activities.ReviewsActivity"
-            android:launchMode="singleTop"
-            android:label="@string/reviews">
-        </activity>
-
-        <activity android:name=".activities.DetailReviewActivity"
+        <activity
+            android:name=".activities.ReviewsActivity"
+            android:label="@string/reviews"
+            android:launchMode="singleTop"></activity>
+        <activity
+            android:name=".activities.DetailReviewActivity"
             android:parentActivityName=".activities.ReviewsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.ReviewsActivity" />
         </activity>
-        <activity android:name=".activities.More_Info_Activity"
+        <activity
+            android:name=".activities.More_Info_Activity"
             android:label=""
-            android:noHistory="true">
-        </activity>
-        <activity android:name=".activities.Personal_Info_activity"/>
-        <activity android:name=".activities.Review_one"
+            android:noHistory="true"></activity>
+        <activity android:name=".activities.Personal_Info_activity" />
+        <activity
+            android:name=".activities.Review_one"
             android:label="@string/review"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".activities.SyncActivity"></activity>
     </application>
 
 </manifest>
